# CriticalTrialEnv

./: .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
clinical_trial_env/: __init__.py  client.py  models.py
clinical_trial_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: adverse_events.json  criteria.json  deviations.json  patients.json
scripts/: generate_all.py  test_api.py  test_full.py  test_hf_api.py
server/: app.py  environment.py  requirements.txt
server/graders/: __init__.py  adverse_event.py  confidence.py  deviation.py  eligibility.py
